<resources>
    <string name="app_name">Full Cup</string>
    <string name="loved_ones">Loved ones</string>
    <string name="health_fitness"><![CDATA[Health & Fitness]]></string>
    <string name="mindfulness">Mindfulness</string>
    <string name="nutrition">Nutrition</string>
    <string name="sleep_habits">Sleep habits</string>
    <string name="productivity">Productivity</string>
    <string name="home">Home</string>
    <string name="activity_log">Activity Log</string>
    <string name="progress">Progress</string>
    <string name="account">Account</string>
    <string name="hello">Hello!</string>
    <string name="my_name_is">My name is</string>
    <string name="and_i_want_to_make_time_for">and I want to make time for</string>
    <string name="select_all_that_apply">Select all that apply</string>
    <string name="next">Next</string>
    <string name="take_a_moment">Take a moment to slow down today. You\'ll save energy by not rushing through your day.</string>
    <string name="today_s_agenda">Today\'s agenda</string>
    <string name="log_activity">Log activity</string>
    <string name="quick_add_activity_for_the_day">Quick add activity for the day</string>
    <string name="remind_me_to_make_time_for">Remind me to make time for</string>
    <string name="tasks_below_are_displayed">Tasks below are displayed on the basis of your chosen preferences. You can change these anytime in task settings.</string>
    <string name="set_reminders">Set Reminders</string>
    <string name="on">on</string>
    <string name="weekdays">on weekdays</string>
    <string name="weekends">on weekends</string>
    <string name="everyday">everyday</string>
    <string name="at">at</string>
    <string name="confirm">Confirm</string>
    <string name="set_reminder">Set reminder</string>
    <string name="remind_me_on">Remind me on</string>
    <string name="greeting_with_name">%1$s, %2$s.</string>
    <string name="good_morning">Good morning</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_evening">Good evening</string>
    <string name="good_day">Good day</string>
    <string name="log_today_s_activity">Log today\'s activity</string>
    <string name="select_activity_you_want_to_mark_as_done">Select activity you want to mark as done.</string>
    <string name="what_did_you_do_for_yourself_today">What did you do for yourself today?</string>
    <string name="write_about_your_wins_here">Write about your wins here</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="duration">Duration</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_completed_all_your_activities">
        You completed all your activities for the day.
        \nYou should be proud of yourself.
        \nWe sure are!
        \nShare your achievement with others.
    </string>
    <string name="share">Share</string>
    <string name="maybe_later"><u>MAYBE LATER</u></string>
    <string name="are_you_ready_to_fill_your_cup">Are you ready to\nfill your cup?</string>
    <string name="get_started">Get started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_underlined"><u>LOGIN</u></string>
    <string name="hello_name">Hello, %s.</string>
    <string name="nice_to_meet_you">Nice to meet you!</string>
    <string name="we_are_excited">We are excited to be a part of this journey with you.</string>
    <string name="the_best_reminder">The best reminder is one that\'s completely automated.</string>
    <string name="let_s_create_some_habits">Let\'s create some habits.</string>
    <string name="remind_me">Remind me</string>
    <string name="just_one_more_thing">Just one more thing.</string>
    <string name="to_make_sure">To make sure we fully optimise your "me time", please link your calendar to get relevant break time suggestions.</string>
    <string name="sign_in_with_google_calendar">Sign in with Google Calendar</string>
    <string name="sign_in_with_outlook_calendar">Sign in with Outlook Calendar</string>
    <string name="allow">Allow</string>
    <string name="not_now"><u>NOT NOW</u></string>
    <string name="to_ensure_a_seamless">
        To ensure a seamless and thorough planning experience, Full Cup requires access to your calendar. We respect your privacy and will never use any data that we don\'t require. You can change your permissions in your account.
    </string>
    <string name="full_cup_would_like_to_access_your_calendar">Full Cup would like to access your calendar.</string>
    <string name="providing_access_to_calendar">Providing access to calendar will help us identify free time and suggest self-care activities. You can manage preferences in account settings.</string>
    <string name="skip_intro">SKIP INTRO</string>
    <string name="self_care_intro_1">What you can’t do for yourself, you can’t effectively do for others. In order to bring your best self to work and play, you have to fill your cup.</string>
    <string name="self_care_intro_2">Self-care is a crucial step in maintaining a healthy relationship with yourself and with others. It’s not possible to pour from an empty cup.</string>
    <string name="you_re_all_set">You\'re all set!</string>
    <string name="your_google_calendar">Your google calendar has been successfully synced. You will receive notifications via google to remind you of your scheduled activities for the day.</string>
    <string name="a_reminder_from_full_cup">A reminder from Full Cup.</string>
</resources>