<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/AppHeadline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/hello" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/my_name_is"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            style="@style/FullCupEditText"
            android:id="@+id/name_edit_text"
            android:padding="10dp"
            android:inputType="textCapSentences"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/and_i_want_to_make_time_for"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/select_all_that_apply" />

        <CheckBox
            android:id="@+id/loved_ones_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loved_ones" />

        <CheckBox
            android:id="@+id/health_and_fitness_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/health_fitness" />

        <CheckBox
            android:id="@+id/mindfulness_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mindfulness"
            app:layout_constraintBottom_toTopOf="@+id/nutrition_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/nutrition_checkbox" />

        <CheckBox
            android:id="@+id/nutrition_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nutrition" />

        <CheckBox
            android:id="@+id/sleep_habits_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep_habits" />

        <CheckBox
            android:id="@+id/productivity_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productivity" />
    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>