<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello!"
        android:layout_marginVertical="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="My name is Peyton and I want to make time for"
        android:textAppearance="@style/TextAppearance.AppCompat"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Select all that apply"/>

    <CheckBox
        android:id="@+id/loved_ones_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loved_ones"/>

    <CheckBox
        android:id="@+id/health_and_fitness_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/health_fitness"/>

    <CheckBox
        android:id="@+id/mindfulness_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mindfulness"/>

    <CheckBox
        android:id="@+id/nutrition_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nutrition"/>

    <CheckBox
        android:id="@+id/sleep_habits_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sleep_habits"/>

    <CheckBox
        android:id="@+id/productivity_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productivity"/>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Next" />
    </LinearLayout>

</LinearLayout>