<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/H4Headline"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="8dp"
        android:id="@+id/hello_text_view"
        android:text="@string/hello_name"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/nice_to_meet_you"/>

    <TextView
        android:layout_marginTop="56dp"
        android:layout_marginHorizontal="42dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/we_are_excited"/>

</LinearLayout>